# RustEngine

./: Cargo.toml  id.txt  map.txt  units.toml
.claude/: settings.local.json
src/: ai_logic.rs  contexts.rs  game_engine.rs  gui.rs  lib.rs  main.rs
src/contexts/: editor.rs  game.rs  menus.rs  mod.rs  settings.rs
